added header and connection to boot strap and css and js using script tags

--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
           <h3> Enter any city to get the 5 day forcast of your area! </h3>
       </div>
 
-      
+
       </header>
+
+
+
+
+  </body>
+
+
+
+</html>
 
       
